fixed layout bug

--- a/stylesheets/performancemonitor.css
+++ b/stylesheets/performancemonitor.css
@@ -118,8 +118,8 @@ div.dm-wrapperDiv div.dm-innerDiv p.dm-labelP {
 }
 .widgetIframe {
   width:350px;
-  height:225px;
-  float:left
+  height:205px;
+  float:left;
 }
 .frameHeader {
   margin-left:20px;
